# drone

./: .gitignore  3d_animation.jl  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
cmake/: arm-none-eabi.cmake
coco/: CMakeLists.txt
coco/include/coco/: assert.h  assert.hh
coco/include/coco/hal/: pwm.hh
coco/include/coco/os/: platform.hh  sleep.hh
coco/platform/linux/: CMakeLists.txt
coco/platform/linux/hal/: CMakeLists.txt  hal_pwm_linux.cc
coco/platform/linux/os/: CMakeLists.txt  linux_platform.cc  linux_sleep.cc
coco/platform/stm32f446/: CMakeLists.txt
coco/platform/stm32f446/hal/: hal_pwm_stm32.cc
coco/platform/stm32f446/os/: stm32_platform.cc  stm32_sleep.cc
docs/: conf.py  esc_xxd_hw30a.rst  index.rst
esc_tester/: CMakeLists.txt  main.cc  servo_control.hh
esc_tester/cmake/: arm-none-eabi.cmake
esc_tester/linker/: STM32F446RETx_FLASH.ld
simulation/: Manifest.toml  plot.jl  rotation_matrix.jl
